fix missing border since C85

--- a/front/vimium-c.css
+++ b/front/vimium-c.css
@@ -8,13 +8,13 @@ text-shadow:none;text-transform:none;visibility:visible;white-space:normal;word-
 color:#000;contain:layout style;direction:ltr;font:12px/1 "Helvetica Neue",Helvetica,Arial,sans-serif;
 pointer-events:none;position:fixed;user-select:none;z-index:2147483647}
 .HM{font-weight:bold;position:absolute;white-space:nowrap}.DHM::backdrop{background:#0000}
-.LH{background:linear-gradient(#fff785,#ffc542);border:0.5px solid #e3be23;border-radius:3px;
+.LH{background:linear-gradient(#fff785,#ffc542);border:0.01px solid #e3be23;border-radius:3px;
 box-shadow:0 3px 5px #0000004d;overflow:hidden;padding:2.5px 3px 2px;position:absolute}
-.IH{background:#fff7854d;border:0.5px solid #c38a22;position:absolute}
+.IH{background:#fff7854d;border:0.01px solid #c38a22;position:absolute}
 .IHS{background:#f664;border-color:#933}
 .HUD{bottom:-1px;font-size:14px;height:20px;line-height:16px;max-width:336px;min-width:152px;overflow:hidden;
 padding:4px 4px 1px;right:152px;text-overflow:ellipsis;white-space:nowrap}
-.HUD:after{background:#eee;border-radius:4px 4px 0 0;border:0.5px solid #bbb;content:"";position:absolute;z-index:-1}
+.HUD:after{background:#eee;border-radius:4px 4px 0 0;border:0.01px solid #bbb;content:"";position:absolute;z-index:-1}
 .HUD.UI{cursor:text;height:24px}.Find{cursor:text;position:static;width:100%}
 .Flash{box-shadow:0 0 4px 2px #4183c4;padding:1px}.AbsF{padding:0;position:absolute}.Sel{box-shadow:0 0 4px 2px #fa0}
 .Frame{border:5px solid #ff0}.Frame,.HUD:after{box-sizing:border-box;height:100%;left:0;top:0;width:100%}
@@ -33,4 +33,4 @@ cursor:text;display:flex;height:21px;padding:4px 4px 0}.r.D{background:#1e1e1e;c
 #s:after,#c:after{content:attr(data-vimium);display:inline}
 :host,body{background-color:#eee!important;margin:0!important}:host(.D),body.D{background-color:#222!important}
 @media(-ms-high-contrast:active){.HC.r:not(#r){background:none}
-.HC.r:after{border:0.5px solid #aaa;bottom:0;content:"";left:0;position:fixed;right:0;top:0;z-index:-1}}
+.HC.r:after{border:0.01px solid #aaa;bottom:0;content:"";left:0;position:fixed;right:0;top:0;z-index:-1}}
